# preemdeck

./: .gitignore  .mdformat.toml  .prettierignore  .prettierrc.json  .trash  AGENTS.md  CLAUDE.md  PLAN_WIRE.md  README.md  biome.json  boot.ps1  boot.sh  install.py  install.spec.ts  install.test.ts  install.ts  package.json  preemdeck-runtime  preemdeck.json  pyproject.toml  tsconfig.json  uninstall.py  uninstall.spec.ts  uninstall.test.ts  uninstall.ts  update.py  update.spec.ts  update.test.ts  update.ts
.claude/: settings.json
.codex/: config.toml
.gemini/: settings.json
.github/workflows/: ci.yml  dist-edge.yml  dist-stable.yml  e2e.yml  release.yml
devscripts/: format-on-edit.spec.ts  format-on-edit.test.ts  format-on-edit.ts  trash.spec.ts  trash.test.ts  trash.ts  verify.spec.ts  verify.ts
e2e/: install.e2e.ts
lib/: args.test.ts  args.ts  fs.test.ts  fs.ts  hook.test.ts  hook.ts  inject.test.ts  inject.ts  json-store.test.ts  json-store.ts  jsonStore.test.ts  jsonStore.ts  proc.test.ts  proc.ts  pyjson.test.ts  pyjson.ts  text.test.ts  text.ts
llm-docs/: CLAUDE_CODEX_GEMINI.md  CODING_STANDARDS.md  COMMON_PATTERNS.md  HOW_TO_CONTRIBUTE.md  INDEX.md  PROMPTING_BEST_PRACTICES.md  RFC_2119_KEYWORDS.md  rewrite-contract.md
llm-docs/how-to-create-agents/: BEST_PRACTICES.md  COMMON_GOTCHAS.md  INDEX.md  TEMPLATE.md
llm-docs/how-to-create-hooks/: BEST_PRACTICES.md  COMMON_GOTCHAS.md  HOOK_CONTRACT.md  INDEX.md
llm-docs/how-to-create-skills/: BEST_PRACTICES.md  COMMON_GOTCHAS.md  DELEGATING_FROM_SKILLS.md  INDEX.md  TEMPLATE.md
ripperdoc/dock/.agents/plugins/: marketplace.json
ripperdoc/dock/.claude-plugin/: marketplace.json
ripperdoc/dock/idea/: gemini-extension.json
ripperdoc/dock/idea/.claude-plugin/: plugin.json
ripperdoc/dock/idea/.codex-plugin/: plugin.json
ripperdoc/dock/idea/toolbox/: _cli.ts  _tmp.ts  assert-idea.ts  cli.ts  diff-file.spec.ts  diff-file.test.ts  diff-file.ts  diff-inline.spec.ts  diff-inline.test.ts  diff-inline.ts  diff_file.py  diff_file.test.ts  diff_file.ts  diff_inline.py  diff_inline.test.ts  diff_inline.ts  in-idea.test.ts  in-idea.ts  in_idea.py  in_idea.test.ts  in_idea.ts  merge-file.spec.ts  merge-file.test.ts  merge-file.ts  merge-inline.spec.ts  merge-inline.test.ts  merge-inline.ts  merge_file.py  merge_file.test.ts  merge_file.ts  merge_inline.py  merge_inline.test.ts  merge_inline.ts  notify.py  notify.spec.ts  notify.test.ts  notify.ts  open-file.spec.ts  open-file.test.ts  open-file.ts  (+44 more)
ripperdoc/dock/jetbrains-ide/: gemini-extension.json
ripperdoc/dock/jetbrains-ide/.codex-plugin/: plugin.json
ripperdoc/dock/jetbrains-ide/toolbox/: diff_file.py  diff_inline.py  merge_file.py  merge_inline.py  open_file.py  open_inline.py  open_url.py  read_logs.py  test_diff_file.py  test_diff_inline.py  test_merge_file.py  test_merge_inline.py  test_open_file.py  test_open_inline.py  test_read_logs.py
ripperdoc/dock/os/: gemini-extension.json
ripperdoc/dock/os/.claude-plugin/: plugin.json
ripperdoc/dock/os/.codex-plugin/: plugin.json
ripperdoc/dock/os/toolbox/: os-ding.test.ts  os-ding.ts  os-notify.test.ts  os-notify.ts  os_ding.py  os_ding.test.ts  os_ding.ts  os_notify.py  os_notify.test.ts  os_notify.ts  test_os_ding.py  test_os_notify.py
ripperdoc/firmware/.agents/plugins/: marketplace.json
ripperdoc/firmware/.claude-plugin/: marketplace.json
ripperdoc/firmware/sys/: README.md  gemini-extension.json
ripperdoc/firmware/sys/.claude-plugin/: plugin.json
ripperdoc/firmware/sys/.codex-plugin/: plugin.json
ripperdoc/firmware/sys/commands/: update.toml
ripperdoc/wetware/.agents/plugins/: marketplace.json
ripperdoc/wetware/.claude-plugin/: marketplace.json
ripperdoc/wetware/directive/: README.md  gemini-extension.json
ripperdoc/wetware/directive/.claude-plugin/: plugin.json
ripperdoc/wetware/directive/.codex-plugin/: plugin.json
ripperdoc/wetware/directive/commands/: ask.toml  auto.toml  default.toml  swarm.toml
ripperdoc/wetware/directive/scripts/: inject-mode.test.ts  inject-mode.ts  inject_mode.py  inject_mode.test.ts  inject_mode.ts  pyname.test.ts  pyname.ts  set-mode.test.ts  set-mode.ts  set_mode.py  set_mode.test.ts  set_mode.ts  show-mode.ts  (+7 more)
ripperdoc/wetware/ghost/: RAPPORT.md  README.md  gemini-extension.json
ripperdoc/wetware/imprint/: IMPRINT.md  README.md  VISUALS.md  gemini-extension.json
ripperdoc/wetware/mode-example/: README.md  gemini-extension.json
ripperdoc/wetware/wire/: .gitignore  README.md
ripperdoc/wetware/wire/server/: .gitignore  pyproject.toml
ripperdoc/wetware/wire/server/src/wire/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  lifecycle.py  manual.py  room.py  schemas.py
ripperdoc/wetware/wire/server/tests/: test_api.py  test_lifecycle.py  test_room.py  test_spectate.py
root/claude/: settings.json
root/claude/agents/: fixer.md
root/codex/agents/: fixer.toml
root/gemini/: settings.json
scripts/: bundle-dist.sh  format-on-edit.test.ts  format-on-edit.ts  format_json.py  format_on_edit.py  format_on_edit.test.ts  format_on_edit.ts  preemdeck-bun  stamp-version.sh  trash.test.ts  trash.ts
source/common/: args.test.ts  hook-inject.spec.ts  hook-inject.ts  hooks.ts  inject.test.ts  inject.ts  json-store.test.ts  json-store.ts  preemdeck.spec.ts  preemdeck.ts  process.spec.ts  process.ts  pyjson.test.ts  pyjson.ts  text.ts
source/overwrite/codex/: config.toml
src/common/: hook-inject.spec.ts  hook-inject.ts  hooks.spec.ts  hooks.ts  preemdeck.spec.ts  preemdeck.ts  process.spec.ts  process.ts
src/install/: args.spec.ts  args.ts  config.spec.ts  config.ts  constants.ts  deps.spec.ts  deps.ts  fs.ts  hosts.spec.ts  hosts.ts  install.spec.ts  install.ts  manifest.spec.ts  manifest.ts  mirror.spec.ts  mirror.ts  overlay.spec.ts  overlay.ts  skin.ts  testkit.ts  uninstall.spec.ts  uninstall.ts  update.spec.ts  update.ts
src/overwrite/claude/: settings.json
src/overwrite/codex/: config.spec.ts  config.toml
src/overwrite/gemini/: settings.json
tests/: test_engrave.py  test_install.py  test_uninstall.py  test_update.py
(+571 files in other folders)
