[project]
name = "preemdeck"
version = "0.1.0"
description = "preemdeck — cross-host plugin distribution for Claude Code, Codex, and Gemini CLI"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "poethepoet>=0.30",
    "ruff>=0.8",
    "mypy>=1.13",
    "mdformat>=0.7",
    "mdformat-gfm>=0.4",
    "mdformat-frontmatter>=2.0",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["ripperdoc/*/*/server"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "PTH"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["preemdeck"]

[tool.mypy]
python_version = "3.12"
files = ["."]
exclude = '(^|/)(\.venv|\.git|\.mypy_cache|\.ruff_cache|__pycache__|build|dist|node_modules)(/|$)'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_boot",
    "test_engrave",
    "test_ghost",
    "test_pulse",
    "test_rapport",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.poe.tasks]
format = ["format-py", "format-md", "format-json"]
format-py = "ruff format ."
format-md = { shell = "find . -type f -name '*.md' -not -path './.venv/*' -not -path './.git/*' -print0 | xargs -0 mdformat" }
format-json = "python scripts/format_json.py"
lint = "ruff check --fix ."
typecheck = "mypy"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
extraPaths = ["."]
