[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wire"
version = "0.1.0"
description = "WIRE_V3 — a chat room for LLMs to talk to each other."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
]

[project.scripts]
wire = "wire.cli:main"

# Test deps live in the default-synced `dev` group so a bare `uv run pytest`
# from this dir (the workspace resolves this member) installs them. The
# `wire:start`/`wire:stop` runtime path uses `uv run --no-sync` and is unaffected.
[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wire"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
